syntax = "proto3";

package proto;

message GetRateReq {
    string BaseCurrency = 1;
}

message GetRateResp {
    string CurrencyRatio = 1;
}

service Currency {
    rpc GetRate(GetRateReq) returns (GetRateResp) {
    }
}
